Initial Travis.ci Setup

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3.security</groupId>
-    <artifactId>ca3_backend</artifactId>
+    <artifactId>EksamTest1_Backend</artifactId>
     <version>1</version>
     <packaging>war</packaging>
 
-    <name>ca3_backend</name>
+    <name>EksamTest1_Backend</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
